# voice-changer

./: .gitignore  LICENSE  README.md  build.ps1  createInstaller.ps1  setup.nsi  start.ps1
client/demo/: README.md  package.json  tsconfig.json
client/demo/src/: 000_index.tsx
client/demo/src/components/demo/: 903_StartingNoticeDialog.tsx
client/demo/src/components/demo/components2/: 001_HeaderArea.tsx  100_ModelSlotArea.tsx  101-1_TuningArea.tsx  101-2_IndexArea.tsx  101-3_SpeakerArea.tsx  101_CharacterArea.tsx  102-1_QualityArea.tsx  102-2_ConvertArea.tsx  102-3_DeviceArea.tsx  102-4_RecorderArea.tsx  102-5_MoreActionArea.tsx  102_ConfigArea.tsx
client/demo/src/css/: App.css
client/demo/src/i18n/: index.ts
server/: MMVCServerSIO.py  README.md  pyproject.toml  server.spec
server/i18n/: messages_ja.json
server/voice_changer/: VoiceChangerManager.py
