[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.11"
uvicorn = "0.21.1"
pyopenssl = "23.1.1"
numpy = "1.23.5"
resampy = "0.4.2"
python-socketio = "5.8.0"
fastapi = "0.95.1"
python-multipart = "0.0.6"
scipy = "1.10.1"
matplotlib = "3.7.1"
websockets = "11.0.2"
faiss-cpu = "1.7.3"
torchcrepe = "0.0.18"
librosa = "0.9.1"
gin = "0.1.6"
gin-config = "0.5.0"
einops = "0.6.0"
local-attention = "1.8.5"
sounddevice = "0.4.6"
dataclasses-json = "0.5.7"
onnxsim = "0.4.28"
torchfcpe = "0.0.3"
onnxruntime-gpu = "^1.20.1"
fairseq = "^0.12.2"
pyworld = "^0.3.4"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "primary"